Fixed overlay font sizing and spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -91,7 +91,7 @@ li a.active {
 .content-segment {
     float: left;
     width: 50%;
-    height: 700px;
+    height: 50%;
     text-align: center;
     background-color: #E0E0E0;
     background-size: cover;
@@ -111,6 +111,8 @@ li a.active {
 
 .overlay-content {
     position: absolute;
+    width: 100%;
+    height: 50%;
     top: 50%;
     left: 50%;
     color: #f2f2f2;
@@ -124,12 +126,13 @@ li a.active {
 }
 
 .overlay-content-heading {
-    font-size: 7em;
-    /* border: 1px solid black; */
+    height: 50%;
+    font-size: 5em;
+    padding: 0;
+    line-height: 1em;
 }
 
 .overlay-content-description {
-    padding-top: 100px;
-    font-size: 2.5em;
-    /* border: 1px solid black; */
+    height: 50%;
+    font-size: 2em;
 }
